--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,19 +22,27 @@ services:
       - "8081:8080"
     depends_on:
       - postgres
+    networks:
+      - app-network
+
+  order-service-api:
+    build: ./order-service-api
+    ports:
+      - "8082:8080"
+    depends_on:
+      - postgres
       - rabbitmq
     networks:
       - app-network
 
-  # order-service-api:
-  #   build: ./order-service-api
-  #   ports:
-  #     - "8082:8080"
-  #   depends_on:
-  #     - postgres
-  #     - rabbitmq
-  #   networks:
-  #     - app-network
+  order-worker:
+    build: ./order-worker
+    ports:
+      - "8083:8080"
+    depends_on:
+      - rabbitmq
+    networks:
+      - app-network
 
 networks:
   app-network:
